# Telecom-Agent-Execution-engine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  sandbox.Dockerfile
backend/: .gitignore  Dockerfile  known_hosts  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c6d8e9f1041_remove_approval_resolution_fields.py  3f4a5b6c7d8e_drop_approval_confirmations.py  7aa32ba8f629_remove_unused_langfuse_fields.py  86337ce3380d_initial_schema.py  995be2700764_remove_system_role_from_chat_messages.py  a7b8c9d0e1f2_execution_modes_and_confirmations.py  b8d4f1c2a9e7_add_skill_script_manifest.py  c2eb5156b73c_remove_skill_version_and_session_status.py  c4f9b7a12e3d_add_skill_runtime_metadata.py  d5e1a0c7b9f2_skills_to_agent_skill_packages.py  e9f1a2b3c4d5_drop_audit_logs_table.py  ec8e1149869c_remove_unused_tool_call_fields.py  f2a6c0d9b8e1_tighten_run_step_types.py
backend/app/: config.py  main.py
backend/app/agent/: checkpointer.py  (+12 more)
backend/scripts/: check_connections.py  init_db.py  seed_langfuse_prompt.py
backend/tests/: conftest.py  run_test.sh  test_agent_graph_execution.py  test_agent_regressions.py  test_agent_skill_execution_integration.py  test_app_contract.py  test_approval_pending_listing.py  test_approval_resume_expiry.py  test_background_stream.py  test_context_window.py  test_db_schema_discovery.py  test_deploy_edge_config.py  test_executor_contract.py  test_foundation_contract.py  test_integration_connectors.py  test_llm_contract.py  test_observability_contract.py  test_path_utils.py  test_run_lifecycle.py  test_security_and_schema.py  test_skill_service_contract.py  test_streaming_contract.py  test_timeline_service.py  test_tool_execution_refactor.py  test_tool_validation.py
(+132 files in other folders)
