[project]
name = "telecom-agent-backend"
version = "0.1.0"
description = "AI agent execution engine for telecom operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4,<2",
    "clickhouse-connect>=1.2.0,<2",
    "fastapi>=0.136.3,<1",
    "langchain-core>=1.4.8,<2",
    "langfuse>=4.0.0,<5",
    "langgraph>=1.2.6,<2",
    "langgraph-checkpoint-postgres>=3.1.0,<4",
    "paramiko>=5.0.0,<6",
    "psycopg[binary,pool]>=3.3.2,<4",
    "psycopg2-binary>=2.9.12,<3",
    "pydantic-settings>=2.14.1,<3",
    "python-dotenv>=1.2.1,<2",
    "sqlalchemy>=2.0.50,<3",
    "uvicorn[standard]>=0.49.0,<1",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.32",
    "langchain-openai>=1.0.0,<2",
    "langchain-anthropic>=1.0.0,<2",
    "langchain>=1.0.0,<2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1",
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.14.10,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI dùng Depends(...) làm default argument là idiom chính thống, không phải lỗi.
ignore = ["B008", "E501"]
